--- a/imsitemap.html
+++ b/imsitemap.html
@@ -15,22 +15,21 @@
 		<meta property="og:image:type" content="image/png">
 		<meta property="og:image:width" content="400">
 		<meta property="og:image:height" content="70">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=960" />
 		
 		<link rel="stylesheet" type="text/css" href="style/reset.css?13-1-8-23" media="screen,print" />
 		<link rel="stylesheet" type="text/css" href="style/print.css?13-1-8-23" media="print" />
 		<link rel="stylesheet" type="text/css" href="style/style.css?13-1-8-23" media="screen,print" />
 		<link rel="stylesheet" type="text/css" href="style/template.css?13-1-8-23" media="screen" />
 		<link rel="stylesheet" type="text/css" href="style/menu.css?13-1-8-23" media="screen" />
-		<link rel="stylesheet" type="text/css" href="pcss/imsitemap.css?13-1-8-23-636857569063291146" media="screen,print" />
+		<link rel="stylesheet" type="text/css" href="pcss/imsitemap.css?13-1-8-23-636857083972754588" media="screen,print" />
 		<script type="text/javascript" src="res/jquery.js?13-1-8-23"></script>
 		<script type="text/javascript" src="res/x5engine.js?13-1-8-23" data-files-version="13-1-8-23"></script>
 		<script type="text/javascript">
 			window.onload = function(){ checkBrowserCompatibility('Ваш браузер не поддерживает функции, требуемые для визуализации этого Сайта.','Возможно, Ваш браузер не поддерживает функции, требуемые для визуализации этого Сайта.','[1]Обновите Ваш браузер[/1] или [2]продолжите процедуру [/2].','http://outdatedbrowser.com/'); };
 			x5engine.utils.currentPagePath = 'imsitemap.html';
 		</script>
-		<link rel="icon" href="favicon.png?13-1-8-23-636857569063251017" type="image/png" />
-		<meta name="yandex-verification" content="8b097c1e3a5aa4d1" />
+		<link rel="icon" href="favicon.png?13-1-8-23-636857083972744584" type="image/png" />
 	</head>
 	<body>
 		<div id="imHeaderBg"></div>
@@ -41,7 +40,7 @@
 				<div id="imHeaderObjects"><div id="imHeader_imTextObject_02_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_2" class="" > <div id="imHeader_imCellStyleGraphics_2"></div><div id="imHeader_imCellStyle_2" ><div id="imHeader_imTextObject_02">
 	<div class="text-tab-content"  id="imHeader_imTextObject_02_tab0" style="">
 		<div class="text-inner">
-			<div><span class="fs20 cf1">Касса на Москву </span></div><div><span class="fs20 cf1">в Белой Калитве</span></div><img class="image-2" src="images/icon-157358_640_qrl1hl8d.png"  title="" alt=""/><span class="cf1"> <b><span class="fs20 ff1"><a href="tel:+79289006355" class="imCssLink">8(928)900-63-55</a> </span></b></span><div><img class="image-0" src="images/icon-157358_640_39cvj7k4.png"  title="" alt=""/> <b><span class="fs20 cf1 ff1"><a href="tel:+78638326611" class="imCssLink">8(86383)2-66-11</a></span></b></div><div><span class="fs16 cf1 ff1">График работы: </span><span class="fs16 cf1 ff1">ежедневно</span></div><div><span class="fs16 cf1 ff1">с 8:30 до 20:30</span></div>
+			<div><span class="fs20 cf1">Касса на Москву </span></div><div><span class="fs20 cf1">в Белой Калитве</span></div><img class="image-2" src="images/icon-157358_640_fypcbowi.png"  title="" alt=""/><span class="cf1"> <b><span class="fs20 ff1"><a href="tel:+79289006355" class="imCssLink">8(928)900-63-55</a> </span></b></span><div><img class="image-0" src="images/icon-157358_640_0bguinyh.png"  title="" alt=""/> <b><span class="fs20 cf1 ff1"><a href="tel:+78638326611" class="imCssLink">8(86383)2-66-11</a></span></b></div><div><span class="fs16 cf1 ff1">График работы: </span><span class="fs16 cf1 ff1">ежедневно</span></div><div><span class="fs16 cf1 ff1">с 8:30 до 20:30</span></div>
 		</div>
 	</div>
 
@@ -123,24 +122,7 @@
 			</div>
 		</div>
 		<span class="imHidden"><a href="#imGoToCont" title="Прочесть эту страницу заново">Назад к содержимому</a> | <a href="#imGoToMenu" title="Прочесть этот сайт заново">Назад к главному меню</a></span>
-		<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(52384222, "init", {
-        id:52384222,
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true,
-        ecommerce:"dataLayer"
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/52384222" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-
+		
 		<noscript class="imNoScript"><div class="alert alert-red">Для использования этого сайта необходимо включить JavaScript.</div></noscript>
 	</body>
 </html>
